--- a/Fronted/Index/mapa.html
+++ b/Fronted/Index/mapa.html
@@ -21,19 +21,20 @@
     <body style="background-color: rgb(43, 146, 112);">
         <nav class="navbar navbar-dark bg-dark border-bottom border-bottom-dark">
             <div class="container">
-              <a class="navbar-brand" href="#" style="color: white;">
-                <img src="/img/An_Animated_Map_of_the_Earth.webp" alt="Logo" width="65" height="60" class="d-inline-block align-text">
-                Trabajo Practico 2
-              </a>
+                <a class="navbar-brand" href="#" style="color: white;">
+                    <img src="/img/An_Animated_Map_of_the_Earth.webp" alt="Logo"
+                        width="65" height="60" class="d-inline-block align-text">
+                    Trabajo Practico 2
+                </a>
             </div>
-          </nav>
-          
+        </nav>
+
         <div class="container">
             <div class="row justify-content-center my-5">
                 <div class="col-sm-12 col-md-8 col-lg-6">
                     <div class="position-relative">
                         <div class="ratio ratio-1x1" style="max-width: 100%;">
-                            <div class="" id="mapContainer"></div>
+                            <div class id="mapContainer"></div>
                         </div>
                     </div>
                 </div>
