--- a/Fronted/Index/mapa.html
+++ b/Fronted/Index/mapa.html
@@ -34,13 +34,12 @@
                 <div class="col-sm-12 col-md-8 col-lg-6">
                     <div class="position-relative">
                         <div class="ratio ratio-1x1" style="max-width: 100%;">
-                            <div class id="mapContainer"></div>
+                            <div id="mapContainer" style="border: solid black 5px;border-radius: 10px;"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
         <script src="https://js.api.here.com/v3/3.1/mapsjs-core.js"
             type="text/javascript" charset="utf-8"></script>
         <script src="https://js.api.here.com/v3/3.1/mapsjs-service.js"
